data/usersCode/chaluu/question3/error.txt
/home/gauravghati/clash2/data/usersCode/chaluu/question3/code3-0.cpp:1:1: error: ‘knhjhvjklkjhgj’ does not name a type
 knhjhvjklkjhgj
 ^~~~~~~~~~~~~~
